Make sure error messages are visible

--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -598,3 +598,7 @@ body.noscroll {
 		}
 	}
 }
+
+.transition-none {
+	transition: none !important;
+}
